# circt

./: CMakeLists.txt
.github/: renovate.json
.github/workflows/: buildAndTest.yml  buildAndTestWindows.yml  codeql.yml  nightlyIntegrationTests.yml  shortIntegrationTests.yml  unifiedBuildTestAndInstall.yml  uploadWheels.yml
frontends/PyCDE/: setup.py
frontends/PyCDE/integration_test/: lit.cfg.py
frontends/PyCDE/src/: behavioral.py  constructs.py  devicedb.py  esi.py  esi_api.py  esi_runtime_common.py  fsm.py  instance.py  module.py  ndarray.py  signals.py  support.py  system.py  testing.py  types.py
frontends/PyCDE/test/: test_cocotb_testbench.py  test_constructs.py  test_esi.py  test_esi_servicegens.py  test_generator_options.py  test_import_hw_modules.py  test_muxing.py  test_polynomial.py
include/circt-c/Dialect/: OM.h
include/circt/Support/: CSE.h  LoweringOptions.h
include/circt/Transforms/: Passes.h  Passes.td
integration_test/: lit.cfg.py
integration_test/Dialect/DC/: dc_cocotb.py
lib/Bindings/Python/: OMModule.cpp  pyproject.toml  setup.py  support.py
lib/Bindings/Python/dialects/: comb.py  fsm.py  hw.py  msft.py  om.py  seq.py
lib/CAPI/Dialect/: OM.cpp
lib/Firtool/: Firtool.cpp
lib/Support/: LoweringOptions.cpp
lib/Transforms/: CMakeLists.txt  PassDetail.h
test/firtool/: always-randomized-reg.fir  export-ref.fir  firtool.mlir  pass-plugins.fir  refs-in-aggs.fir  register-randomization.fir
tools/arcilator/: arcilator-header-cpp.py
tools/circt-opt/: CMakeLists.txt
tools/esi/: esi_cosim.py.in
tools/firtool/: firtool.cpp
(+105 files in other folders)
