[build-system]
requires = [
    "setuptools>=68",
    "setuptools_scm>=8.0",
    "wheel",
    "cmake>=3.13.4",
    # MLIR build depends.
    "numpy",
    "pybind11>=2.9",
    "PyYAML",
]
build-backend = "setuptools.build_meta"

# Enable version inference from Git.
[tool.setuptools_scm]
root = "../../.."
tag_regex = "^firtool-(\\d+\\.\\d+\\.\\d+)?$"
local_scheme = "no-local-version"
git_describe_command = "git describe --dirty --tags --long --match firtool*"
